--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -1,7 +1,7 @@
 .faq {
   display: flex;
   padding: 80px 0 40px 0;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   align-items: center;
 }
 
