--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -58,15 +58,14 @@
   border: 2px solid transparent;
   padding: 0.7rem 1.25rem;
   cursor: pointer;
-  transition: opacity 0.2s ease;
   position: relative;
   overflow: hidden;
-  transition: 0.1s ease;
+  transition: opacity 0.2s ease;
 }
 
 .button-container button:hover {
-  border-radius: 0;
-  border: 2px solid rgb(20, 20, 20);
+  border-radius: 100px;
+  border: 2px solid transparent;
   opacity: 1;
 }
 
@@ -78,12 +77,7 @@
   position: relative;
 }
 
-.animated-pixel {
-  position: absolute;
-  background-color: #ff0000;
-  opacity: 0;
-  mix-blend-mode: difference;
-}
+.animated-pixel { display: none; }
 
 @media (max-width: 480px) {
   .button-container button {
