--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -8,7 +8,7 @@
   width: 100%;
   height: calc(100vh + 190px);
   min-height: 1000px;
-  background: radial-gradient(140% 107.13% at 50% 10%, #000000 0%, #006AFE 69.27%, #e6f0ff 100%);
+  background: radial-gradient(140% 107.13% at 50% 10%, transparent 37.41%, #006AFE 69.27%, #e6f0ff 100%);
   justify-content: center;
   align-items: center;
   text-align: center;
